# PGMManipulation

./: .gitignore  CMakeLists.txt
exercises/: CMakeLists.txt  p1.c  p2.c  p3.c  p4.c
src/: main.c  pgm.c  pgm.h  pgmfilter.c  pgmfilter.h
tests/: main.cpp  pgmtest.cpp
